# beeai-framework-py-starter

./: .gitignore  pyproject.toml  tmp_guardrails_cli_smoketest.py  tmp_guardrails_edge_smoketest.py  tmp_guardrails_smoketest.py  tmp_guardrails_v2_adversarial_smoketest.py  tmp_guardrails_v2_claim_citation_alignment_smoketest.py  tmp_guardrails_v2_flags_smoketest.py  tmp_guardrails_v2_mixed_claims_smoketest.py  tmp_guardrails_v2_semantic_smoketest.py  tmp_guardrails_v2_strict_claims_smoketest.py  tmp_llm_answer_generator.py  tmp_rag_guardrails.py  tmp_rag_guardrails_impl.py  tmp_rag_prompt_wrapper.py  tmp_rag_query_planner.py  tmp_rag_query_run.py  tmp_real_ingest_qdrant.py
beeai_framework_starter/guardrails/: __init__.py  api.py  utils.py  v1.py  v2.py
docs/: guardrails_cli_smoketest.md  guardrails_coverage.md  guardrails_limitations.md  guardrails_smoketest.md  guardrails_v1_spec.md  guardrails_v2_release_notes.md  guardrails_v2_roadmap.md
